2011-05-01  Oliver Hunt  <oliver@apple.com>

        Reviewed by Gavin Barraclough.

        Assigning to function identifier under strict should throw
        https://bugs.webkit.org/show_bug.cgi?id=59289

        Add test case for correct behaviour, and update mozilla test results to reflect
        the correct result.

        * fast/js/basic-strict-mode-expected.txt:
        * fast/js/mozilla/strict/assign-to-callee-name-expected.txt:
        * fast/js/script-tests/basic-strict-mode.js:

2011-05-01  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Polish CSP host and port matching
        https://bugs.webkit.org/show_bug.cgi?id=59899

        Test two host wildcard cases.

        * http/tests/security/contentSecurityPolicy/image-full-host-wildcard-allowed-expected.txt: Added.
        * http/tests/security/contentSecurityPolicy/image-full-host-wildcard-allowed.html: Added.
        * http/tests/security/contentSecurityPolicy/image-host-wildcard-allowed-expected.txt: Added.
        * http/tests/security/contentSecurityPolicy/image-host-wildcard-allowed.html: Added.

2011-05-01  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        CSP default-src is missing
        https://bugs.webkit.org/show_bug.cgi?id=58641

        Test that default-src controls some scripting policy and that
        script-src, if present, overrides default-src.  In principle, we could
        test the interaction of default-src with every other directive, but
        that seems like overkill.

        * http/tests/security/contentSecurityPolicy/default-src-inline-allowed-expected.txt: Added.
        * http/tests/security/contentSecurityPolicy/default-src-inline-allowed.html: Added.
        * http/tests/security/contentSecurityPolicy/default-src-inline-blocked-expected.txt: Added.
        * http/tests/security/contentSecurityPolicy/default-src-inline-blocked.html: Added.