@@ -2,6 +2,17 @@
 
         Reviewed by Gavin Barraclough.
 
+        ES5 Strict mode does not allow getter and setter for same propId
+        https://bugs.webkit.org/show_bug.cgi?id=57295
+
+        Update for correct results
+
+        * fast/js/mozilla/strict/11.1.5-expected.txt:
+
+2011-05-01  Oliver Hunt  <oliver@apple.com>
+
+        Reviewed by Gavin Barraclough.
+
         Assigning to function identifier under strict should throw
         https://bugs.webkit.org/show_bug.cgi?id=59289
 
